--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-Hello World
+<!DOCTYPE html>
+<meta http-equiv="Content-Security-Policy" content="default-src 'self'; base-uri 'none'; form-action 'none'">
+<html lang="en">
+<head>
+    <title>Kevin Xia</title>
+    <link rel="stylesheet" href="static/style.css">
+</head>
+<body>
+<div class="content">
+    <h1>Kevin Xia</h1>
+    <h2>About me</h2>
+    <p>
+        Hi! I'm Kevin. Currently, I'm a software engineer in the Secure Frameworks team at Stripe helping to make Stripe
+        more secure!
+    </p>
+    <p>
+        Recently, I have been making an effort to be more privacy conscious. As part of this, I have been attempting to
+        de-Google myself.
+    </p>
+    <p>
+        Outside of programming, I enjoy anime, gaming, and reading. I also try to bake (sometimes even successfully!)
+        during long weekends.
+    </p>
+    <p>Feel free to reach out to me at me@thecurrentdomain</p>
+    <h2>Reading</h2>
+    <p>I tend to read quite a bit. My aim this year (2025) is to read at least 12 books, last year I finished 10!</p>
+    <p>
+        My reading list tends to be pretty fantasy-heavy, but recently I've been trying to read classic books from
+        various genres.
+        I also have a fascination with Greek mythology which is reflected in my reading taste. Occasionally, you'll also
+        see a trashy light novel or two for those lazy days.
+    </p>
+    <p>Some of my favourite books include:</p>
+    <ul>
+        <li>East of Eden by John Steinbeck</li>
+        <li>The Mistborn Series by Brandon Sanderson</li>
+        <li>The Broken Empire Series by Mark Lawrence</li>
+        <li>The Iliad</li>
+        <li>Medea</li>
+    </ul>
+    <p>You can see what other stories I read at my <a href="https://hardcover.app/@scry5">Hardcover profile</a></p>
+</div>
+</body>
+</html>
