--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         <li>The Broken Empire Series by Mark Lawrence</li>
         <li>The Iliad</li>
         <li>Medea</li>
+        <li>Earthsea</li>
+        <li>So I'm a Spider, So What?</li>
     </ul>
     <p>You can see what other stories I read at my <a href="https://hardcover.app/@scry5">Hardcover profile</a></p>
 </div>
