Change font to woff format and add author names to books

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <li>East of Eden by John Steinbeck</li>
         <li>The Mistborn Series by Brandon Sanderson</li>
         <li>The Broken Empire Series by Mark Lawrence</li>
-        <li>The Iliad</li>
-        <li>Medea</li>
-        <li>Earthsea</li>
-        <li>So I'm a Spider, So What?</li>
+        <li>The Iliad by Homer</li>
+        <li>Medea by Euripides</li>
+        <li>A Wizard of Earthsea by Ursula K. Le Guin</li>
+        <li>So I'm a Spider, So What? by Okina Baba</li>
     </ul>
     <p>You can see what other stories I read at my <a href="https://hardcover.app/@scry5">Hardcover profile</a></p>
 </div>
